# gymbuddy

./: .gitignore  README.md  bun.lockb  database.cql  docker-compose.yaml  justfile  package.json
doc/backend/: api.md  schema.md  video.md
frontend/web/: bun.lockb  package.json  tsconfig.json
frontend/web/app/: root.tsx  routes.ts
pose-detect/src/: main.py
pose-detect/src/exercises/: squat.py
pose-detect/src/repo/: __init__.py  cassandra.py
pose-detect/src/storage/: S3.py  __init__.py  base.py
pose-detect/src/utils/: __init__.py  estimator.py  video.py
proto/: buf.gen.yaml  buf.yaml  script.sh
proto/v1/entities/: client.proto  organiser.proto
proto/web/: bun.lockb  package.json
services/: Cargo.toml
services/pose-detect/: requirement.txt
services/pose-detect/src/: app.py  main.py
services/pose-detect/src/exercises/: __init__.py  base.py  squat.py
services/pose-detect/src/repo/: Mongo.py  MongoCoreRepo.py  Repo.py  __init__.py
services/pose-detect/src/repo/tables/: Exercise.py  Media.py  __init__.py
services/pose-detect/src/utils/: estimator.py  video.py
services/src/: main.rs
services/src/controllers/: clients.rs  exercises.rs  media.rs  mod.rs
services/src/databases/: base_client.rs  cassandra.rs  mod.rs  mongo.rs  redis.rs
services/src/models/: client.rs  exercise.rs  media.rs  mod.rs  pose_detection_model.rs  trainer.rs
services/src/routes/: clients.rs  exercises.rs  media.rs  mod.rs  organiser.rs  trainers.rs
services/src/storage/: base_storage.rs  mod.rs  s3.rs
services/src/utils/: env.rs
(+40 files in other folders)
