[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
aws-sdk-s3 = "1.61.0"
cassandra-cpp = "3.0.2"
dotenv = "0.15.0"
env_logger = "0.11.5"
http = "1.1.0"
redis = "0.27.5"
scylla = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
ulid = { version = "1.1.3", features = ["serde"] }
