[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
aws-config = "1.5.14"
aws-credential-types = "1.2.1"
aws-sdk-s3 = "1.61.0"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
cassandra-cpp = "3.0.2"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
http = "1.1.0"
log = "0.4.25"
mongodb = "3.2.0"
redis = "0.27.5"
scylla = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
ulid = { version = "1.1.3", features = ["serde"] }
